# mulle-test

./: .gitignore  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  README.md  RELEASENOTES.md  build-for-test.sh  build-test-common.sh  install.sh  installer  mulle-test  mulle-test-env  mulle-test.sublime-project  mulle-tests-init  run-test-c-common.sh  run-test-common.sh  run-test-m-common.sh  test-c-common.sh  test-m-common.sh  test-sharedlib-common.sh  test-staticlib-common.sh  test-tools-common.sh
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
cmake/share/: Environment.cmake
cola/: description.md.bud  example.md.bud  info.md.bud  properties.plist  usage.md.bud
dox/: Makefile  flow.graphml  mulle-test-fs.dot
mulle-project/: formula-info.sh  version-info.sh
src/: build-test-common.sh  mulle-test-bash-completion.sh  mulle-test-build.sh  mulle-test-clean.sh  mulle-test-cmake.sh  mulle-test-compiler.sh  mulle-test-coverage.sh  mulle-test-craft.sh  mulle-test-environment.sh  mulle-test-execute.sh  mulle-test-flagbuilder.sh  mulle-test-init.sh  mulle-test-linkorder.sh  mulle-test-locate.sh  mulle-test-logging.sh  mulle-test-mingw.sh  mulle-test-regex.sh  mulle-test-regexsearch.sh  mulle-test-run.sh  run-test-common.sh  test-m-common.sh  test-sharedlib-common.sh  test-staticlib-common.sh  test-tools-common.sh
src/mulle-nat/mulle-test/: environment
src/mulle-nat/mulle-test/env/share/libexec/: mulle-test-bash-completion.sh
src/mulle-nat/mulle-test/share/libexec/: test-task.sh
src/mulle-sde/base-test-runtime/: environment  environment-none
src/mulle-sde/c-test-executable/: inherit  usage
src/mulle-sde/c-test-executable-demo/: usage
src/mulle-sde/c-test-executable-demo/demo/all/: README.md
src/mulle-sde/c-test-library/: inherit
src/mulle-sde/c-test-library-demo/demo/all/: README.md
src/mulle-sde/c-test-runtime/: inherit  sourcetree
src/mulle-sde/objc-test/: inherit  usage
src/mulle-sde/objc-test-demo/demo/all/10-first/: noleak.m
src/mulle-sde/objc-test-executable/: inherit  usage
src/mulle-sde/objc-test-library/: inherit
src/mulle-sde/objc-test-library-demo/demo/all/: README.md
src/mulle-sde/objc-test-runtime/: environment  inherit  sourcetree
src/mulle-sde/test/: init  usage
(+6 files in other folders)
